--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
         <form action="">
             <input type="text" name="" id="" placeholder="update your todos" autofocus size="50">
-            <button type="button" onclick="updateList();">Update list</button>
+            <button type="button" onclick="update();" >Update list</button>
         </form>
 
         <p class="list"></p>
