--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>WHATCHA DO</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
+        <h1>This is a simple todo list app still under construction</h1>
+        
         <form action="">
             <input type="text" name="" id="" placeholder="update your todos" autofocus size="50">
             <button type="button" onclick="update();" >Update list</button>
+            <button type="reset">Reset</button>
+            
         </form>
 
         <p class="list"></p>
