--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>This is a simple todo list app still under construction</h1>
         
         <form action="">
-            <input type="text" name="" id="" placeholder="update your todos" autofocus size="50">
+            <input type="text" name="" id="" placeholder="update your todos" autofocus size="50" required>
             <button type="button" onclick="update();" >Update list</button>
             <button type="reset">Reset</button>
             
